# FinApp

./: .gitignore  Dockerfile_dagster  Dockerfile_pipelines  LICENSE  README.md  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-non-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  workspace.yaml
app/: README.md  setup.py
app/finapp/: __init__.py  main_finapp.py  repository.py
app/finapp/pipelines/: bond_prices.py  forescating_market.py
app/finapp/resources/: custom_clients.py
app/finapp/solids/: extract_data.py
app/finapp_tests/test_pipelines/: test_my_pipeline.py
app/finapp_tests/test_solids/: test_hello.py
config/cloud_docker/: Dockerfile_dagster  Dockerfile_pipelines  dagster.yaml  database_startup.sh  workspace.yaml
config/local/: dagster.yaml  workspace.yaml
config/local_docker/: Dockerfile_dagster  Dockerfile_pipelines  dagster.yaml  workspace.yaml
db/: settings.sql
finapp/: README.md  __init__.py  datartransferepos.py  main_finapp.py  repository.py  setup.py  utils.py  workspace.yaml
finapp/finapp/: main_finapp.py  repository.py
finapp/finapp/models/: montecarlochains.py
finapp/finapp/pipelines/: my_pipeline.py
finapp/finapp/schedules/: my_hourly_schedule.py
finapp/finapp/sensors/: my_sensor.py
finapp/finapp/solids/: extract_data.py
finapp/finapp_tests/test_pipelines/: test_my_pipeline.py
finapp/local_data/: bond_yields_all_noheader.csv  lookup2.csv  lookup3.csv
finapp/pipelines/: bond_prices.py  forescast_bond_price_canada.py  forescating_market.py
finapp/resources/: asset_manager.py  custom_clients.py  datacustom_map.py  get_config_jobs.py  io_managers.py  parquetgcsiomanager.py  potsgres_connector.py  utils.py
finapp/schedules/: my_hourly_schedule.py
finapp/schemas/: bonds.py  caBondPrice.py
finapp/sensors/: my_sensor.py
finapp/solids/: clean_transform_data.py  data_ingestion.py  data_tranform_yields.py  data_transform.py  extract_data.py  models_data.py  save_data.py  train_model_data.py  transform_data.py
finapp_tests/test_pipelines/: test_my_pipeline.py
finapp_tests/test_solids/: test_hello.py
src/: main.py
terraform-gcp/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+5 files in other folders)
